# ai-chat

./: .gitignore  CLAUDE.md  REFACTOR_PLAN.md
.claude/skills/ai-chat-deploy/: SKILL.md
.claude/skills/ai-chat-deploy/references/: ecs-setup.md  (+2 more)
.claude/skills/resume-writer/: SKILL.md
backend-java/: CLAUDE.md
backend-java/.claude/studio-extend/: SKILL.md
backend-java/agent-chat-ui/: BUILD_GUIDE.md  CLAUDE.md  pnpm-lock.yaml
backend-java/ai-chat-ali/: .gitignore  CLAUDE.md  README.md  build.gradle  gradle.properties  settings.gradle
backend-java/ai-chat-ali/config/: config.yml
backend-java/ai-chat-ali/doc/: agent-tool-dynamic-flow.md
backend-java/docs/: studio-integration-guide.md
backend-python/ai-chat/: main.py  pyproject.toml
backend-python/ai-chat/agent/: .env  agent_main.py  agent_state.py  llm_config.py
backend-python/ai-chat/agent/custom_mcp/: mcp_server.py
backend-python/ai-chat/agent/custom_mcp/tool/: ai_search.py
backend-python/ai-chat/agent/mcp/: mcp_server.py
backend-python/ai-chat/agent/tool/: ai_search.py
backend-python/ai-chat/agent/worker/: map_worker.py
backend-python/ai-chat/streamlit-ex/streamlit/: basic_streaming.py  chat_ui.py
backend-python/medical_service/: main.py
backend-python/model_interface/: CLAUDE.md  main.py  model_repo.py
backend-python/model_interface/models/: feiyan_distillation.pth
deploy/ecs/: frps.sh  java-app.sh
deploy/ecs/config/: .env.example  frps.toml
deploy/home/: cnn.ps1  frpc.ps1  medical.ps1
deploy/home/config/: frpc.toml
frontend/: index.html  script.js  style.css
(+98 files in other folders)
