[project]
name = "ai-chat"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.1.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-qwq>=0.3.4",
    "langgraph>=1.0.10",
    "streamlit>=1.55.0",
]


